# GGXX

./: CMakeLists.txt  README.md
SDK/include/Hook/: HookAPI.h
SDK/include/Utils/: StringHelper.h
src/: GlobalService.h  dllmain.cpp  plugin.cpp  version.h
src/Hook/: Hook.cpp
src/Logger/: Logger.h
src/MC/: Actor.cpp  Actor.h  BlockPos.h  ClientInstance.cpp  ClientInstance.h  Global.h  GuiData.h  Level.cpp  Level.h  LocalPlayer.cpp  LocalPlayer.h  Mob.h  Packet.h  Player.h  Vec2.h  Vec3.h  enums.h  types.h
src/Utils/: StringHelper.cpp
